more style changes to code blocks

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="code_block_corner_radius">5dp</dimen>
     <dimen name="code_block_padding">5dp</dimen>
+    <dimen name="code_block_left_padding">5dp</dimen>
+    <dimen name="code_block_top_padding">5dp</dimen>
 </resources>
