--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/message_item_background"
         android:padding="8dp"
-        android:text="Sample message"
+        android:lineSpacingExtra="2sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
