--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,16 +7,42 @@
 <!--    app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
 <!--    tools:showIn="@layout/app_bar_main">-->
 
-<!--    <fragment-->
-<!--        android:id="@+id/nav_host_fragment_content_main"-->
-<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/conversation_recycler_view"-->
 <!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        app:defaultNavHost="true"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/compose_container"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:navGraph="@navigation/mobile_navigation" />-->
+<!--        tools:listitem="@layout/message_item" />-->
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/compose_container"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="8dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent">-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/message_input"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:hint="Type your message" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/send_message_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:background="?attr/selectableItemBackground"-->
+<!--            android:contentDescription="Send"-->
+<!--            app:srcCompat="@drawable/ic_send" />-->
+<!--    </LinearLayout>-->
 <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -44,16 +70,16 @@
         android:orientation="horizontal"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <EditText
             android:id="@+id/message_input"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/message_input_background"
-            android:hint="Type your message" />
+            android:hint="@string/input_prompt"
+            android:autofillHints="" />
 
         <ImageButton
             android:id="@+id/send_message_button"
@@ -61,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:background="?attr/selectableItemBackground"
-            android:contentDescription="Send"
+            android:contentDescription="@string/send"
             app:srcCompat="@drawable/ic_send" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
