--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,10 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="code_block_corner_radius">5dp</dimen>
+    <dimen name="code_block_corner_radius">0dp</dimen>
     <dimen name="code_block_padding">5dp</dimen>
-    <dimen name="code_block_left_padding">5dp</dimen>
-    <dimen name="code_block_top_padding">5dp</dimen>
+    <dimen name="code_block_left_padding">10dp</dimen>
+    <dimen name="code_block_top_padding">10dp</dimen>
+    <dimen name="code_text_size">12dp</dimen>
+    <dimen name="code_indentation">12dp</dimen>
 </resources>
